--- a/Assignment_3/index.html
+++ b/Assignment_3/index.html
@@ -51,7 +51,7 @@
       </a>
     </nav>
     <div class="cont">
-      <h2><i>Please select the option for details </i></h2>
+      <h2 style="font-family: calibri">Please select the option for details</h2>
     </div>
     
     <div class="container">
@@ -62,7 +62,7 @@
   
     <table id="tabl" class="table table-blue tab">
       <div class="cont">
-        <h2><i>Details</i></h2>
+        <h2 style="font-family: calibri">Details</h2>
       </div>
       
       <tr>
